Config app for use the angular templates

--- a/app/views/ninjas/index.html.haml
+++ b/app/views/ninjas/index.html.haml
@@ -2,6 +2,7 @@
   %h1
     ITS MY FIRST APP WITH NINJAS GUYS!
   %p
-    {{2 + 2}}
+    %input{"type"=>"text", "ng-model"=>"ninjas.name"}
   %p
     {{ ninjas.name }}
+  %ninja
