--- a/app/views/ninjas/index.html.haml
+++ b/app/views/ninjas/index.html.haml
@@ -1,3 +1,4 @@
+%header{"ng-include"=>"'menu_template.html'"}
 .max-container{"ng-controller"=>"NinjasController as ninjas"}
   %h1
     ITS MY FIRST APP WITH NINJAS GUYS!
