Add structure html and styles for menu-angular template

--- a/app/assets/templates/menu_template.html.haml
+++ b/app/assets/templates/menu_template.html.haml
@@ -1,1 +1,12 @@
-im the menu
+.menu
+  .menu__row
+    %h1.menu__logo
+      Ninja Directory
+  .menu__row
+    %ul
+      %li.menu__link
+        %a{:href => "#"}
+          Home
+      %li.menu__link
+        %a{:href => "#"}
+          List Ninjas
