--- a/app/views/ninjas/index.html.haml
+++ b/app/views/ninjas/index.html.haml
@@ -1,9 +1,3 @@
 %header{"ng-include"=>"'menu_template.html'"}
 .max-container{"ng-controller"=>"NinjasController as ninjas"}
-  %h1
-    ITS MY FIRST APP WITH NINJAS GUYS!
-  %p
-    %input{"type"=>"text", "ng-model"=>"ninjas.name"}
-  %p
-    {{ ninjas.name }}
-  %ninja
+  %ng-view
