--- a/app/views/ninjas/index.html.haml
+++ b/app/views/ninjas/index.html.haml
@@ -1,3 +1,2 @@
 %header{"ng-include"=>"'menu_template.html'"}
-.max-container{"ng-controller"=>"NinjasController as ninjas"}
-  %ng-view
+%main{"ng-view"=>true}
