--- a/app/assets/templates/menu_template.html.haml
+++ b/app/assets/templates/menu_template.html.haml
@@ -5,8 +5,8 @@
   .menu__row
     %ul
       %li.menu__link
-        %a{:href => "#"}
+        %a{:href => '#/home'}
           Home
       %li.menu__link
-        %a{:href => "#"}
+        %a{:href => '#/directory'}
           List Ninjas
