--- a/app/assets/stylesheets/ninja_styles/partials/_main.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_main.scss
@@ -1,8 +1,11 @@
 .max-container {
   margin: 0 20px;
   .content {
-    min-width: 90vw;
-    padding: 30px 0;
+    width: calc(85vw - 50px);
+    margin: 30px auto;
+    background: $grey-light;
+    padding: 20px 30px;
+    border-radius: 10px;
     @extend %flex-column-container;
     @include e(column) {
       width: 100%;
