Create a angular directive for show a random ninja

--- a/app/assets/stylesheets/ninja_styles/partials/_buttons.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_buttons.scss
@@ -27,7 +27,7 @@
 .belt {
   padding: 8px 10px;
   color: white;
-  border-radius: 50%;
+  border-radius: 10px;
   margin-right: 20px;
   @include m('red') {
     background: rgba(red, 0.7);
