--- a/app/assets/templates/home_template.html.haml
+++ b/app/assets/templates/home_template.html.haml
@@ -1,4 +1,7 @@
 .max-container
   %section.content
-    %h1
-      HOME PAGE!
+    .content__column
+      %h1
+        HOME PAGE!
+    .content__column.container__flex--center
+      %random-ninja.text--center{"ninjas"=>"ninjas.data", "title"=>"'Random ninja'"}
