--- a/app/assets/stylesheets/ninja_styles/partials/_main.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_main.scss
@@ -1,3 +1,11 @@
+.text--center { text-align: center; }
+.container__flex--center {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .max-container {
   margin: 0 20px;
   .content {
