--- a/app/assets/templates/home_template.html.haml
+++ b/app/assets/templates/home_template.html.haml
@@ -3,5 +3,6 @@
     .content__column
       %h1
         HOME PAGE!
-    .content__column.container__flex--center
-      %random-ninja.text--center{"ninjas"=>"ninjas.data", "title"=>"'Random ninja'"}
+    %random-ninja.text--center{"ninjas"=>"ninjas.data", "title"=>"'Random ninja'"}
+      %h3
+        My new random ninja
