Add animations for add-delete ninjas

--- a/app/assets/stylesheets/ninja_styles/partials/_main.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_main.scss
@@ -30,6 +30,7 @@
       width: 100%;
       padding: 20px 0;
       display: flex;
+      overflow: hidden;
       input.search {
         border: 1.5px solid $blue-light;
         width: 100%;
