--- a/app/assets/templates/directory_template.html.haml
+++ b/app/assets/templates/directory_template.html.haml
@@ -8,6 +8,8 @@
     .content__column
       %input.search{"type"=>"text", "placeholder"=>"Search a ninja for his name", "ng-model"=>"ninjas.search"}
     .content__column
+      .no-ninjas{"ng-show"=>"ninjas.noData", "style"=>"width: 100%;transition: all {{ninjas.dataCount*1.3}}s ease-in-out"}
+        %p Nothing ninjas here.
       %ul
         %li.ninja{"ng-repeat"=>"ninja in ninjas.data | orderBy: ninjas.orderNinjaBy | filter: ninjas.search", "ng-show"=>"ninja.available"}
           .span
@@ -24,3 +26,6 @@
         %input{"type"=>"text", "placeholder"=>"belt", "ng-model"=>"ninjas.newNinja.belt"}
         %input{"type"=>"number", "placeholder"=>"rate", "ng-model"=>"ninjas.newNinja.rate"}
         %input{"type"=>"submit", "value"=>"Add a new ninja"}
+    .content__column
+      %a{:href => "", "ng-click"=>"ninjas.removeAll()"}
+        Remove all ninjas
