Add validations and styles for contact form

--- a/app/assets/stylesheets/ninja_styles/partials/_menus.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_menus.scss
@@ -6,7 +6,7 @@
   color: $white;
   background: $red-light;
   @include e(row) {
-    width: 260px;
+    width: auto;
     ul {
       list-style: none;
       @extend %flex-row-container;
