--- a/app/assets/templates/menu_template.html.haml
+++ b/app/assets/templates/menu_template.html.haml
@@ -10,3 +10,6 @@
       %li.menu__link
         %a{:href => '#/directory'}
           List Ninjas
+      %li.menu__link
+        %a{:href => "#/contact"}
+          Contact
