--- a/app/assets/stylesheets/ninja_styles/partials/_main.scss
+++ b/app/assets/stylesheets/ninja_styles/partials/_main.scss
@@ -64,16 +64,20 @@
       }
       form {
         padding: 20px 10px;
-        height: 200px;
+        height: auto;
         width: 100%;
         @extend %flex-column-container;
         justify-content: space-around;
         align-items: center;
-        input {
+        input, textarea {
           width: 80%;
           outline: 0;
           border: 1px solid $blue-light;
           padding: 10px 8px;
+          margin-top: 20px;
+        }
+        textarea {
+          height: 200px;
         }
         input[type=submit] {
           width: 60%;
@@ -81,6 +85,15 @@
           color: $grey;
           border: 0;
           box-shadow: 0 2px 10px rgba($black, 0.4);
+          transition: all 0.4s ease-in-out;
+        }
+        input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+          border: 1px solid red;
+        }
+        input[disabled=disabled] {
+          opacity: 0.4;
+          cursor: not-allowed !important;
+          box-shadow: none;
         }
       }
     };
