Activate the html5 mode

--- a/app/assets/templates/menu_template.html.haml
+++ b/app/assets/templates/menu_template.html.haml
@@ -5,11 +5,11 @@
   .menu__row
     %ul
       %li.menu__link
-        %a{:href => '#/home'}
+        %a{:href => '/home'}
           Home
       %li.menu__link
-        %a{:href => '#/directory'}
+        %a{:href => '/directory'}
           List Ninjas
       %li.menu__link
-        %a{:href => "#/contact"}
+        %a{:href => "/contact"}
           Contact
